@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Work around POSIX undefined exceptions
+
 0.002     2020-12-08 08:20:20-08:00 America/Los_Angeles
 
     - Only use ERESTART when present
